@@ -1625,28 +1625,6 @@ debug_pass_ctrlc (struct target_ops *self)
 }
 
 static void
-delegate_check_pending_interrupt (struct target_ops *self)
-{
-  self = self->beneath;
-  self->to_check_pending_interrupt (self);
-}
-
-static void
-tdefault_check_pending_interrupt (struct target_ops *self)
-{
-}
-
-static void
-debug_check_pending_interrupt (struct target_ops *self)
-{
-  fprintf_unfiltered (gdb_stdlog, "-> %s->to_check_pending_interrupt (...)\n", debug_target.to_shortname);
-  debug_target.to_check_pending_interrupt (&debug_target);
-  fprintf_unfiltered (gdb_stdlog, "<- %s->to_check_pending_interrupt (", debug_target.to_shortname);
-  target_debug_print_struct_target_ops_p (&debug_target);
-  fputs_unfiltered (")\n", gdb_stdlog);
-}
-
-static void
 delegate_rcmd (struct target_ops *self, const char *arg1, struct ui_file *arg2)
 {
   self = self->beneath;
@@ -4213,8 +4191,6 @@ install_delegators (struct target_ops *ops)
     ops->to_interrupt = delegate_interrupt;
   if (ops->to_pass_ctrlc == NULL)
     ops->to_pass_ctrlc = delegate_pass_ctrlc;
-  if (ops->to_check_pending_interrupt == NULL)
-    ops->to_check_pending_interrupt = delegate_check_pending_interrupt;
   if (ops->to_rcmd == NULL)
     ops->to_rcmd = delegate_rcmd;
   if (ops->to_pid_to_exec_file == NULL)
@@ -4462,7 +4438,6 @@ install_dummy_methods (struct target_ops *ops)
   ops->to_stop = tdefault_stop;
   ops->to_interrupt = tdefault_interrupt;
   ops->to_pass_ctrlc = default_target_pass_ctrlc;
-  ops->to_check_pending_interrupt = tdefault_check_pending_interrupt;
   ops->to_rcmd = default_rcmd;
   ops->to_pid_to_exec_file = tdefault_pid_to_exec_file;
   ops->to_log_command = tdefault_log_command;
@@ -4619,7 +4594,6 @@ init_debug_target (struct target_ops *ops)
   ops->to_stop = debug_stop;
   ops->to_interrupt = debug_interrupt;
   ops->to_pass_ctrlc = debug_pass_ctrlc;
-  ops->to_check_pending_interrupt = debug_check_pending_interrupt;
   ops->to_rcmd = debug_rcmd;
   ops->to_pid_to_exec_file = debug_pid_to_exec_file;
   ops->to_log_command = debug_log_command;
